--- a/package.json
+++ b/package.json
@@ -9,10 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.8",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-animatable": "^1.4.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-maps": "^1.18.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.5",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^5.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "tvh.event.mobile": "file:",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
