modified:   app.json 	new file:   assets/Free Vector _ Hand drawn webinar concept with woman.jpg 	modified:   App.js 	new file:   assets/alx.jpg 	new file:   assets/aws heckathon.jpg 	new file:   assets/gks.png 	new file:   assets/hero.jpg 	new file:   assets/sem.jpg 	new file:   metro.config.js 	modified:   package-lock.json 	modified:   package.json 	modified:   screens/home.js

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "tvh.event.mobile",
-    "slug": "tvh.event.mobile",
+    "slug": "tvh-event-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
