--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.8",
+    "axios": "^1.7.7",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
