--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.0.0",
@@ -20,12 +21,14 @@
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
     "expo": "~51.0.14",
+    "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "install": "^0.13.0",
     "metro-resolver": "^0.80.8",
     "missing-asset-registry-path": "^0.0.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
@@ -37,6 +40,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
