--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.14",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
