--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "date-fns": "^4.1.0",
     "expo": "~51.0.14",
     "expo-font": "~12.0.10",
+    "expo-linking": "^7.0.3",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "install": "^0.13.0",
+    "lucide-react": "^0.460.0",
     "metro-resolver": "^0.80.8",
     "missing-asset-registry-path": "^0.0.0",
     "react": "18.2.0",
@@ -41,8 +43,9 @@
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.9.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
