--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.9.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
@@ -53,6 +54,7 @@
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "toggle-switch-react-native": "^3.3.0",
     "tvh-event-mobile": "file:",
     "tvh.event.mobile": "file:",
     "yup": "^1.4.0"
