--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
+    "react-native-calendars": "^1.1307.0",
     "react-native-device-info": "^14.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
