--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~51.0.14",
+    "expo-camera": "~15.0.16",
     "expo-font": "~12.0.10",
     "expo-linking": "^7.0.3",
     "expo-status-bar": "~1.12.1",
@@ -38,12 +39,14 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1307.0",
+    "react-native-camera": "^4.2.1",
     "react-native-device-info": "^14.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
