--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.0.0",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -24,30 +24,30 @@
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.14",
-    "expo-font": "~12.0.10",
+    "expo": "^52.0.19",
+    "expo-font": "~13.0.1",
     "expo-linking": "^7.0.3",
-    "expo-status-bar": "~1.12.1",
+    "expo-status-bar": "~2.0.0",
     "formik": "^2.4.6",
     "install": "^0.13.0",
     "lucide-react": "^0.460.0",
     "metro-resolver": "^0.80.8",
     "missing-asset-registry-path": "^0.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-animatable": "^1.4.0",
     "react-native-device-info": "^14.0.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "1.14.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-svg": "^15.9.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "metro": "^0.80.8",
+    "metro": "^0.81.0",
     "metro-config": "^0.80.8"
   },
   "private": true
